--- a/newsWebsite/src/main/webapp/index.html
+++ b/newsWebsite/src/main/webapp/index.html
@@ -11,10 +11,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/IFNews.ico">
 </head>
 <body>
-
-    <!-- nav-bar -->
     <div id="nav-bar"></div>
-
 
     <main class="container">
 
@@ -36,8 +33,7 @@
 
                     <div class="p-4 mb-3 bg-body-tertiary rounded">
                         <h4 class="fst-italic">Sobre</h4>
-                        <p class="mb-0">Abaixo voce encontrará, se disponível, as noticias recentes, além das categorias
-                            presentes no site.</p>
+                        <p class="mb-0">Abaixo voce encontrará, se disponível, as noticias recentes, além das categorias presentes no site.</p>
                     </div>
 
                     <!--Posts recentes (max de 3)-->
@@ -61,9 +57,9 @@
 
     <div id="footer"></div>
 
-    <script src="components/navbar.js" type="module"></script>
-    <script src="js/index.js" type="module"></script>
-    <script src="components/footer.js" type="module"></script>
+    <script src="assets/js/components/navbar.js" type="module"></script>
+    <script src="assets/js/index.js" type="module"></script>
+    <script src="assets/js/components/footer.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
