--- a/newsWebsite/src/main/webapp/404.html
+++ b/newsWebsite/src/main/webapp/404.html
@@ -6,8 +6,8 @@
     <title>IFNews</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
+      <link rel="stylesheet" id="stylesheet" href="assets/css/style.css">
+      <link rel="icon" type="image/x-icon" href="assets/images/IFNews.ico">
   </head>
   <body>
 
@@ -16,7 +16,7 @@
 <main class="container">
 
     <div class=" d-flex flex-column align-items-center my-5">
-        <img class="" src="assets/images/404.png" alt="error" width="400px">
+        <img src="assets/images/404.png" alt="error" width="400px">
         <h1 class="mt-5 text-center">Oops! Página não encontrada.</h1>
         <h4 class="mt-2 text-center">Parece que você se perdeu. Vamos voltar ao <a href="index.html" class="text-primary">início</a>?</h4>
         <p class="mt-2 text-center">Codigo do erro: 404</p>
@@ -25,8 +25,8 @@
 
 <div id="footer"></div>
 
-<script src="../../assets/js/components/navbar.js" type="module"></script>
-<script src="../../assets/js/components/footer.js" type="module"></script>
+<script type="module" src="assets/js/components/navbar.js"></script>
+<script type="module" src="assets/js/components/footer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
