--- a/newsWebsite/src/main/webapp/about.html
+++ b/newsWebsite/src/main/webapp/about.html
@@ -6,8 +6,8 @@
     <title>IFNews</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="${pageContext.request.contextPath}/assets/images/IFNews.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/images/IFNews.ico">
   </head>
   <body>
 
@@ -56,10 +56,8 @@
 </main>
 <div id="footer"></div>
 
-<script src="${pageContext.request.contextPath}/js/components/navbar.js" type="module"></script>
-<script src="js/components/footer.js" type="module"></script>
+<script src="assets/js/components/navbar.js" type="module"></script>
+<script src="assets/js/components/footer.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
